bugfix: Preview/Frame preview now update when a layers visibility is toggled

--- a/less/area-center.less
+++ b/less/area-center.less
@@ -25,6 +25,6 @@
   #Layer-Tools {
     background: transparent;
     z-index: 10000000;
-    //cursor: none;
+    cursor: none;
   }
 }
